@@ -33,7 +33,7 @@ class CompileTest(TestBase, AssertsExecutionResults):
     def test_update(self):
         t1.update().compile()
 
-    @profiling.function_call_count(122, {'2.4': 81, '3':132})
+    @profiling.function_call_count(129, {'2.4': 81, '3':132})
     def test_update_whereclause(self):
         t1.update().where(t1.c.c2==12).compile()
 
