@@ -153,7 +153,10 @@ CHANGES
     types, before falling back to that of the known type
     on the other side of the expression.  If the 
     "fallback" type is compatible (i.e. CHAR from String),
-    the literal side will use that.  Also part of 
+    the literal side will use that.  TypeDecorator
+    types override this by default to coerce the "literal"
+    side unconditionally, which can be changed by implementing
+    the coerce_compared_value() method. Also part of 
     [ticket:1683].
 
   - Made sqlalchemy.sql.expressions.Executable part of public 
